--- a/ProjetoIndividual/app/src/main/res/layout/activity_main.xml
+++ b/ProjetoIndividual/app/src/main/res/layout/activity_main.xml
@@ -123,6 +123,8 @@
         app:layout_constraintTop_toBottomOf="@id/et_nome_3"
         android:layout_marginTop="100dp"
         android:translationX="9dp"
+        android:layout_marginLeft="1dp"
+        android:layout_marginRight="1dp"
         />
 
 
